# magic-hotel

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: README.md  package.json
app/src/: store.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/api/ephemeral/delegation-status/: route.ts
app/src/app/api/hotels/: route.ts
app/src/app/api/players/: route.ts
app/src/app/api/players/[pubkey]/: route.ts
app/src/app/hotels/: page.tsx
app/src/app/hotels/[pubkey]/: page.tsx
app/src/app/play/[pubkey]/: page.tsx
app/src/components/game/: canvas.tsx
app/src/components/hotel/: hotel-card.tsx
app/src/components/player/: player-card.tsx  player-list.tsx
app/src/components/solana/: magic-block-engine.ts  magic-block-provider.tsx  solana-provider.tsx
app/src/components/ui/: ui-layout.tsx
app/src/hooks/: use-delegation-status.ts  use-magic-block-engine.ts  use-magic-hotel-program.ts  use-provider.ts  use-session-key.ts  use-visible-hotels.ts
app/src/lib/: constants.ts  magic_hotel.json  magic_hotel.ts  types.ts  utils.ts
app/src/slices/: api-slice.ts  user-slice.ts  wallet-slice.ts
programs/magic_hotel/: Cargo.toml
programs/magic_hotel/src/: constant.rs  errors.rs  lib.rs
programs/magic_hotel/src/instructions/: create_connection.rs  create_hotel.rs  create_map.rs  create_player.rs  delegate_account.rs  enter_hotel.rs  mod.rs  move_player.rs  undelegate_account.rs  use_connection.rs
programs/magic_hotel/src/state/: game_map.rs  hotel.rs  map.rs  mod.rs  player.rs  room.rs
tests/: magic-hotel.ts
(+6 files in other folders)
